<resources>
    <string name="app_name" translatable="false">Soundboard Crafter</string>
    <string name="database_name" translatable="false">soundboard.db</string>
    <string name="media_player_service_description">Plays sounds for the Soundboard Crafter</string>
    <string name="media_player_notification_channel_name">Playing</string>
    <string name="media_player_notification_channel_description">Sounds currently playing</string>
    <string name="media_player_notification_title">Playing</string>
    <plurals name="media_player_notification_default_text">
        <item quantity="one">1 sound</item>
        <item quantity="other">%,d sounds</item>
    </plurals>
    <string name="media_player_notification_stop_action_title">Stop</string>
    <string name="toolbar_menu_reset_all">Reset All</string>
    <string name="toolbar_menu_audiofiles_sort">Sort</string>
    <string name="context_menu_edit_sound">Edit</string>
    <string name="context_menu_remove_sound">Remove</string>
    <string name="context_menu_edit_favorites">Edit</string>
    <string name="context_menu_delete_favorites">Delete</string>
    <string name="context_menu_edit_soundboard">Edit</string>
    <string name="context_menu_copy_soundboard">Copy</string>
    <string name="context_menu_delete_soundboard">Delete</string>
    <string name="toolbar_menu_audiofiles_sort_alpha">Sort by Name</string>
    <string name="toolbar_menu_audiofiles_sort_manually">Sort Manually</string>
    <string name="toolbar_menu_audiofiles_sort_date">Sort by Date</string>
    <string name="sound_selection_button_content_description">Sound source selection</string>
    <string name="toolbar_menu_audiofiles_folders_all_on_device">All on Device</string>
    <string name="toolbar_menu_audiofiles_assets">Provided</string>
    <string name="toolbar_menu_audiofiles_folders_single">By Folder</string>
    <string name="soundboards_play_sort_manually_title">Hold and drag to sort</string>
    <string name="reset_all_title">Delete all data?</string>
    <string name="reset_all_message">All favorites, soundboards and sound data will be deleted
        from the app. Settings like the volume will be lost. Sound files won\'t be touched.</string>
    <string name="reset_all_title_cancel">Cancel</string>
    <string name="reset_all_title_ok">OK</string>
    <string name="favorites_edit_favorites_name_hint">Name</string>
    <string name="favorites_edit_soundboards_label">Soundboards</string>
    <string name="soundboard_edit_soundboard_name_hint">Name</string>
    <string name="soundboard_edit_sounds_label">Sounds</string>
    <string name="soundboard_copy_prefix">Copy of\u0020</string>
    <string name="sound_edit_sound_name_hint">Name</string>
    <string name="sound_edit_volume_down">Volume down</string>
    <string name="sound_edit_volume_up">Volume up</string>
    <string name="sound_edit_loopSwitch">Loop</string>
    <string name="sound_edit_soundboards_label">Soundboards</string>
    <string name="soundboards_tab_title">Soundboards</string>
    <string name="audiofile_list_file_not_found">Sound file not found</string>
    <string name="update_all_soundboards_and_sounds">Purge</string>
    <string name="sounds_tab_title">Sounds</string>
    <plurals name="subfolder_num_sounds">
        <item quantity="one">1 sound</item>
        <item quantity="other">%,d sounds</item>
    </plurals>
    <string name="favorites_tab_title">Favorites</string>
    <string name="new_favorites">Add new Favorites</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="new_soundboard">Add new soundboard</string>
    <string name="new_soundboard_name">NEW</string>
    <string name="soundboard_list_preparing">Preparing soundboards…</string>
    <string name="new_favorites_name">NEW FAVORITES</string>
    <string name="sound_name">Sound name</string>
    <string name="sound_add">Add to soundboard</string>
    <string name="subfolder_icon">Subfolder</string>
    <string name="sound_list_item_icon">Soundboard</string>
    <string name="soundboard_name">Soundboard name</string>
    <string name="folder_name">Folder name</string>
    <string name="folder_up">Folder up</string>
    <plurals name="sound_count_text">
        <item quantity="one">1 Sound</item>
        <item quantity="other">%d Sounds</item>
    </plurals>
    <plurals name="soundboard_count_text">
        <item quantity="one">1 soundboard</item>
        <item quantity="other">%d soundboards</item>
    </plurals>
    <string name="soundboards_default_toolbar">All Soundboards</string>
    <string name="soundboards_currently_playing">Currently Playing</string>
    <string name="soundboard_file_not_found">Sound file not found - removed from soundboard</string>
    <string name="audiofile_not_found">Sound file not found</string>
    <string name="tutorial_soundboard_play_start_sound_description">Click to play</string>
    <string name="tutorial_soundboard_play_multiple_sounds_description">You can play
        multiple sounds at the same time</string>
    <string name="tutorial_soundboard_play_edit_sound_description">Long-click to edit</string>
    <string name="tutorial_soundboard_play_remove_sound_description">Long-click to remove sound from your own soundboard</string>
    <string name="tutorial_audio_file_list_edit">Click here to add sound to soundboard</string>
    <string name="tutorial_soundboard_edit_local_audio">Click here to use your own sounds</string>
    <string name="tutorial_soundboard_list_context_menu_description">Long-click to copy
        and tailor soundboard</string>
    <string name="tutorial_soundboard_list_custom_context_menu_description">Long-click to edit
        or delete (only your own soundboards)</string>
    <string name="tutorial_favorites_list_context_menu_description">Long-click to edit</string>
    <string name="toolbar_menu_item_settings">Settings</string>
    <string name="toolbar_menu_item_about">About</string>
    <string name="settings_activity_title">Settings</string>
    <string name="setting_use_favorites_title">Use favorites</string>
    <string name="setting_use_favorites_summary">You can define several lists, each comprising
        only some of your soundboards. This is useful if you want to play different games where
        you only need some of your soundboards per game.</string>
    <string name="about_activity_title">About</string>
    <string name="about_text_html">
        <![CDATA[
        Soundboard Crafter
        <p>Version 0.3.0</p>
        <p>&#160;</p>
        <p>&#169;2021 The 3 Sound Crafties:<br/>Nikolaj Budzyn, Julia Rimpfl, Anna-Maria Kwasny</p>
        <p>&#160;</p>
        <p><i>Programming:</i><br>&#160;Nikolaj Budzyn<br>&#160;Julia Rimpfl</p>
        <p>&#160;</p>
        <p><i>Source Code:</i><br>&#160;<a href="https://github.com/the3soundcrafties/SoundboardCrafter">GitHub</a>&nbsp;&ndash; <a href="https://github.com/the3soundcrafties/SoundboardCrafter/blob/master/LICENSE">License/a></p>
        <p>&#160;</p>
        <p><i>Libraries:</i><br>&#160;<a href="https://github.com/KeepSafe/TapTargetView">TapTargetView</a>&nbsp;&ndash; <a href="https://github.com/KeepSafe/TapTargetView/blob/master/LICENSE">License</a></p>
        <p><i>Sounds:</i>
            <br>&#160;<a href="https://www.gamemasteraudio.com/">Gamemaster Audio</a>&nbsp;&ndash; <a href="https://unity3d.com/legal/as_terms">License</a>
            <br>&#160;<a href="https://www.artstation.com/gwriterstudio">GWriter Studio</a>&nbsp;&ndash; <a href="https://unity3d.com/legal/as_terms">License</a>
            <br>&#160;<a href="https://assetstore.unity.com/publishers/10052">Krotos LTD</a>&nbsp;&ndash; <a href="https://unity3d.com/legal/as_terms">License</a>
            <br>&#160;<a href="https://assetstore.unity.com/packages/audio/sound-fx/animals/sparrow-sounds-158174">no9 Game Sounds</a>&nbsp;&ndash; <a href="https://unity3d.com/legal/as_terms">License</a>
            <br>&#160;<a href="https://assetstore.unity.com/publishers/4078">Muz Station Productions</a>&nbsp;&ndash; <a href="https://unity3d.com/legal/as_terms">License</a>
            <br>&#160;<a href="https://assetstore.unity.com/packages/audio/sound-fx/creatures/monster-sounds-atmospheres-sfx-pack-155494">Olivier Girardot</a>&nbsp;&ndash; <a href="https://unity3d.com/legal/as_terms">License</a>
            <br>&#160;<a href="https://benmcculloch.com">Out There Audio</a>&nbsp;&ndash; <a href="https://unity3d.com/legal/as_terms">License</a>
            <br>&#160;<a href="https://principlesound.com">PRINCIPLE Sound Design</a>&nbsp;&ndash; <a href="https://unity3d.com/legal/as_terms">License</a>
            <br>&#160;<a href="https://www.soundsparkllc.com">Sound Spark LLC</a>&nbsp;&ndash; <a href="https://unity3d.com/legal/as_terms">License</a>
            <br>&#160;In-House Production: Anna-Maria Kwasny, Elisabeth Kwasny
        </p>
        <p>&#160;</p>
        <p><i>Icon based on a drawing by</i><br>&#160;Evelyn Falkensteiner</p>
        <p>&#160;</p>
        <p><i>Idea and Sound Selection:</i><br>&#160;Anna-Maria Kwasny</p>
        ]]></string>
    <string name="toolbar_menu_item_restart_tutorial">Restart Tutorial</string>
    <string name="yourSoundsPermissionRationaleTitle">Your Sounds</string>
    <string name="yourSoundsPermissionRationaleMsg">You can use your own sounds in the
        soundboards, if you give permission to access your local media. (Permissions in
        the Settings screen)</string>
</resources>
