<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_menu_item_restart_tutorial"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/toolbar_menu_item_restart_tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_menu_item_settings"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/toolbar_menu_item_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_menu_item_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/toolbar_menu_item_about"
        app:showAsAction="never" />
</menu>
