<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sound_edit_sound_name_hint"
        tools:ignore="UnusedAttribute"
        android:importantForAutofill="no"
        android:inputType="text|textCapSentences"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconVolumeDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25.6dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/sound_edit_volume_down"
        android:src="@drawable/ic_baseline_volume_down_30_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <ImageView
        android:id="@+id/iconVolumeUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25.6dp"
        android:contentDescription="@string/sound_edit_volume_up"
        android:src="@drawable/ic_baseline_volume_up_30_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <com.google.android.material.slider.Slider
        android:id="@+id/volumePercentageSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        android:value="100.0"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="6dp"
        app:layout_constraintStart_toEndOf="@+id/iconVolumeDown"
        app:layout_constraintEnd_toStartOf="@+id/iconVolumeUp"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        android:theme="@style/MyMaterialTheme" />

    <Switch
        android:id="@+id/loopSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:checked="true"
        android:text="@string/sound_edit_loopSwitch"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volumePercentageSlider" />

    <TextView
        android:id="@+id/soundboardsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sound_edit_soundboards_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loopSwitch" />

    <ListView
        android:id="@+id/soundboardsList"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="205dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundboardsLabel" />
</merge>
